# Syneto-Labs

./: main.py  pyproject.toml  test.txt
